--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.3",
-    "@types/node": "^20",
     "@types/nodemailer": "^6.4.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -32,11 +31,10 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
